# news-paper

./: app.py
.github/workflows/: cdk-deploy.yml
code/: .gitignore  Cargo.toml  Dockerfile  LICENSE
code/src/: common.rs  main.rs
code/src/providers/: gujarat_samachar.rs  mod.rs  sandesh.rs
news_paper_infra/: news_paper_infra_stack.py
tests/unit/: test_news_paper_infra_stack.py
