[package]
name = "news-scrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
dotenv = "0.15.0"
fantoccini = { version = "0.21.4" }
futures = "0.3.31"
jpeg-to-pdf = "0.2.3"
reqwest = { version = "0.12.12", features = ["multipart", "stream"]}
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt-multi-thread","macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.2"

[[bin]]
name = "news-paper-scrapper"
path = "src/main.rs"

